--- a/book/ml_principles/vision/imgrec.ipynb
+++ b/book/ml_principles/vision/imgrec.ipynb
@@ -293,7 +293,8 @@
    "execution_count": 6,
    "metadata": {
     "tags": [
-     "hide-input"
+     "hide-input",
+     "hide-output"
     ]
    },
    "outputs": [
