after ml princ lesson 5

--- a/book/ml_principles/labs/imgrec_taco_explore.ipynb
+++ b/book/ml_principles/labs/imgrec_taco_explore.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -36,7 +36,11 @@
    },
    "outputs": [],
    "source": [
-    "import kagglehub"
+    "import os\n",
+    "from pprint import pprint\n",
+    "\n",
+    "import kagglehub\n",
+    "import yaml"
    ]
   },
   {
@@ -48,22 +52,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
     "outputId": "a1a66a69-77da-4846-8626-26f41015f417"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/user/.cache/kagglehub/datasets/vencerlanz09/taco-dataset-yolo-format/versions/1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Download the dataset\n",
     "path = kagglehub.dataset_download(\"vencerlanz09/taco-dataset-yolo-format\")\n",
@@ -89,7 +85,25 @@
     "outputId": "8083bd8e-a3d2-466e-9ffc-ff8e62e4ac74"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "with open(path + \"/README.dataset.txt\") as f:\n",
+    "    print(f.read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "outputId": "4c003979-4eb5-40ed-fe70-8be442a3981a"
+   },
+   "outputs": [],
+   "source": [
+    "with open(path + \"/README.roboflow.txt\") as f:\n",
+    "    print(f.read())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -111,7 +125,35 @@
     "outputId": "5501086b-1432-4a05-d2b3-f590403ac773"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "with open(path + \"/data.yaml\") as f:\n",
+    "    meta = yaml.safe_load(f)\n",
+    "\n",
+    "# yaml is loaded as a dictionary; using p(retty)print for a nicer output\n",
+    "pprint(meta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "outputId": "1f362339-1f66-4f3b-8705-6a2fe4eda4d3"
+   },
+   "outputs": [],
+   "source": [
+    "# the path to the images needs to be updated\n",
+    "# os.listdir(meta[\"train\"]) # this generates a FileNotFoundError\n",
+    "\n",
+    "meta[\"train\"] = path + \"/train/images\"\n",
+    "meta[\"val\"] = path + \"/valid/images\"\n",
+    "meta[\"test\"] = path + \"/test/images\"\n",
+    "\n",
+    "# show the first five image files\n",
+    "os.listdir(meta[\"train\"])[:5]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -120,7 +162,15 @@
     "## Pandas DataFrame\n",
     "We create a DataFrame to explore the training, validation and test data.  \n",
     "Each image has a `images/*.jpg` and `labels/*.txt` counterpart.  \n",
-    "We first compile a list of all the images so we can read in the corresponding label files."
+    "\n",
+    "The end result should be a DataFrame with the following columns:\n",
+    "- `img_path`: image file path\n",
+    "- `subset`: train|valid|test\n",
+    "- `class_id`: first element of a line in the corresponding labels file\n",
+    "- `center_x`: second element of a line in the corresponding labels file\n",
+    "- `center_y`: third element of a line in the corresponding labels file\n",
+    "- `width`: fourth element of a line in the corresponding labels file\n",
+    "- `height`: fifth element of a line in the corresponding labels file\n"
    ]
   },
   {
@@ -136,10 +186,17 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "outputId": "70182c86-9708-4cfc-e55f-508fd0ab058c"
+   },
+   "outputs": [],
    "source": [
-    "Next we build a dictionary of all labels"
+    "# check the data types"
    ]
   },
   {
@@ -149,30 +206,12 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
-    "outputId": "f5fa55a1-7df6-4af8-e950-50136931bf82"
+    "outputId": "480788ba-498f-417e-acad-d48d0426913f"
    },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "Now we can create a Pandas DataFrame directly from the labels dictionary."
+    "# adjust the dtypes"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 206
-    },
-    "outputId": "63769ac4-9679-4a69-ac79-56607ff2eb63"
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -220,69 +259,6 @@
     },
     "outputId": "8f651716-6de4-4f85-d53a-507e1c793d48"
    },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "⚠️ There seems to be a labelling error. Could we detect and remove anomalies with machine learning?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Check the largest example for a cigarette"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "So simple area distributions will not work. Perhaps a simple rule system could help: if the same image contains a bottle and a bottle cap, the area of the latter should always be smaller."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Could it be that all bottle and bottle cap labels are switched?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We need to switch the labels in the meta data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": []
   }
