typo linear regression

--- a/book/math_foundations/linear_regression/glm.ipynb
+++ b/book/math_foundations/linear_regression/glm.ipynb
@@ -760,7 +760,8 @@
     "\\nabla BCE = \\frac{1}{n} \\pmb{X}^T(\\pmb{\\hat{y}} - \\pmb{y})\n",
     "$$\n",
     "\n",
-    "Deze elegante uitdrukking is identiek aan de gradiënt voor lineaire regressie met SSE loss (op een factor na)."
+    "Deze elegante uitdrukking is identiek aan de gradiënt voor lineaire regressie met SSE loss (op een factor na).\n",
+    ":::"
    ]
   },
   {
@@ -769,7 +770,8 @@
    "metadata": {},
    "source": [
     "### Gradient descent\n",
-    "Er wijzigt niets aan de definitie van het gradient descent leeralgoritme. We gebruiken nu gewoon de gradiënt van de $BCE$ _loss_ functie. \n",
+    "Er wijzigt niets aan de definitie van het gradient descent leeralgoritme. We gebruiken nu gewoon de gradiënt van de $BCE$ _loss_ functie.  \n",
+    "\n",
     "$$\n",
     "\\begin{align}\n",
     "\\pmb{b}^{k+1} &= \\pmb{b}^k - \\lambda \\nabla J(\\pmb{b}^k) \\cr\n",
