mf glossary wip

--- a/book/math_foundations/linalg/basic_ops.ipynb
+++ b/book/math_foundations/linalg/basic_ops.ipynb
@@ -13,6 +13,7 @@
                 "Bij element-gewijze operaties tussen tensors impliceert dit dat de dimensionaliteit moet kloppen. Denk aan lego blokken die op elkaar moeten passen.\n",
                 ":::\n",
                 "\n",
+                "(target-scalar-addition)=\n",
                 "## Scalair optellen\n",
                 "$$\n",
                 "\\pmb{a} + b = \\begin{bmatrix}\n",
@@ -33,6 +34,7 @@
                 "\\end{bmatrix}\n",
                 "$$\n",
                 "\n",
+                "(target-scalar-multiplication)=\n",
                 "## Scalaire vermenigvuldiging\n",
                 "$$\n",
                 "\\pmb{a}b = \\begin{bmatrix}\n",
@@ -53,6 +55,7 @@
                 "\\end{bmatrix}\n",
                 "$$\n",
                 "\n",
+                "(target-tensor-addition)=\n",
                 "## Tensors optellen\n",
                 ":::{warning} $ $\n",
                 "Enkel bij passende dimensies.\n",
@@ -118,6 +121,7 @@
                 "\\end{bmatrix}\n",
                 "$$\n",
                 "\n",
+                "(target-element-wise-product)=\n",
                 "## Element-gewijs product\n",
                 "Dit is het zogenaamde _Hadamard_ product. Let op het speciale symbool voor de operatie!\n",
                 "\n",
