--- a/book/math_foundations/linalg/tensors.ipynb
+++ b/book/math_foundations/linalg/tensors.ipynb
@@ -13,6 +13,7 @@
                 "We volgen doorheen de cursus de notatieconventies in [Goodfellow et al. (2016, _xi-xiv_)](https://www.deeplearningbook.org/front_matter.pdf).\n",
                 "\n",
                 "## Scalairen\n",
+                "(target-scalar)=\n",
                 "Een scalaire waarde (of simpelweg \"**scalair**\") is gewoon een **enkelvoudig getal** - in tegenstelling tot de andere objecten die een verzameling van meerdere getallen voorstellen.  \n",
                 "  \n",
                 "We zullen ze in wiskundige notatie aanduiden met schuingedrukte kleine letters, bv. $s \\in \\mathbb{R}$.\n",
@@ -24,6 +25,7 @@
                 "- reëel: $\\mathbb{R} = \\mathbb{Q} \\cup \\{\\pi, e, ...\\}$\n",
                 "- enz.\n",
                 "\n",
+                "(target-vector)=\n",
                 "## Vectoren\n",
                 "**Een vector is een geordende reeks van getallen van éénzelfde type**. Ieder individueel getal wordt geïdentificeerd door de _index_ binnen de ordening (startend bij $1$).\n",
                 "Een vector duiden we in kleine letters en in het vet aan, bv. $\\pmb{x}$. Het eerste element duiden we aan met $x_1$, het laatste met $x_n$. Wanneer we de elementen expliciet willen voorstellen,\n",
@@ -1148,6 +1150,7 @@
             "metadata": {},
             "source": [
                 "## Matrices\n",
+                "(target-matrices)=\n",
                 "Wanneer we bijvoorbeeld niet 1 maar $m$ punten in een $n$ dimensionale ruimte willen weergeven, kunnen we een **matrix** notatie gebruiken: $\\pmb{X} \\isin \\mathbb{R}^{mxn}$.\n",
                 "**Een matrix is een geordende reeks van vectoren**. We duiden ze aan in het vet met een hoofdletter, bv $\\pmb{X}$. Voor individuele elementen gebruiken we gewone hoofdletters, bv. $X_{2,4}$ \n",
                 "$$\n",
@@ -1160,6 +1163,7 @@
                 "\\end{bmatrix}\n",
                 "$$\n",
                 "\n",
+                "(target-row-vector)=\n",
                 "De rijen worden gevormd door **rij-vectoren**:\n",
                 "$$\n",
                 "\\pmb{x_i} = [X_{i, 1}, \\ldots, X_{i, j}, \\ldots, X_{i, n}]^T = \\begin{bmatrix}\n",
@@ -1170,6 +1174,8 @@
                 "X_{i, n}\n",
                 "\\end{bmatrix}\n",
                 "$$\n",
+                "\n",
+                "(target-column-vector)=\n",
                 "De kolommen worden gevormd door **kolom-vectoren**:\n",
                 "$$\n",
                 "\\pmb{x_j} = \\begin{bmatrix}\n",
@@ -1181,6 +1187,7 @@
                 "\\end{bmatrix}\n",
                 "$$\n",
                 "\n",
+                "(target-transpose)=\n",
                 "De notatie $\\ldots^T$ duidt op **transpositie** tussen rijen en kolommen.\n",
                 "$$\n",
                 "\\pmb{X^T} = \\begin{bmatrix}\n",
@@ -1267,6 +1274,8 @@
             "source": [
                 "\n",
                 "## Tensors\n",
+                "\n",
+                "(target-tensors)=\n",
                 "Wanneer we het concept van een matrix uitbreiden naar een **N-dimensionale _grid_ van vectoren**, spreken we van een **tensor**."
             ]
         },
